# bdr

./: .gitattributes  .gitignore  GNUmakefile.in  INSTALL.src  Makefile  Makefile.global.in  Makefile.in  README.bdr  README.developers  README.md  README.messaging  TODO  aclocal.m4  autogen.sh  bdr--0.5.sql  bdr--0.7.1--0.8.0.sql  bdr--0.7.1--0.8.sql  bdr--0.7.sql  bdr--0.8.0--0.8.0.1.sql  bdr--0.8.0.3--0.8.0.4.sql  bdr--0.8.0.4--0.8.0.5.sql  bdr--0.8.0.5--0.8.0.6.sql  bdr--0.8.0.6--0.8.0.7.sql  bdr--0.8.0.sql  bdr--3.0.0.sql  bdr.c  bdr.conf.sample  bdr.conf.sample.in  bdr.control  bdr.control.in  bdr.h  bdr_94b2_compat.c  bdr_94b2_compat.h  bdr_apply.c  bdr_apply.h  bdr_catalogs.c  bdr_catalogs.h  bdr_catcache.c  bdr_catcache.h  bdr_commandfilter.c  (+95 more)
compat10/: bdr_compat.c  bdr_compat.h
contrib/: Makefile
doc/: Makefile.in  appendix-releasenotes.sgml  appendix-signatures.sgml  appendix-technotes.sgml  bdr.sgml  filelist.sgml  install-packages.sgml  install-requirements.sgml  install-source.sgml  install.sgml  legal.sgml  manual-catalogs-views.sgml  manual-commands.sgml  manual-conflicts.sgml  manual-ddl-replication.sgml  manual-distributed-sequences.sgml  manual-functions.sgml  manual-global-sequences.sgml  manual-monitoring.sgml  manual-node-management.sgml  manual-overview.sgml  manual-replication-sets.sgml  manual-settings.sgml  manual-upgrade.sgml  overview.sgml  publish.sh  quickstart-install.sgml  quickstart-test.sgml  quickstart.sgml  stylesheet.dsl  website-docs.css
expected/: catalog.out  compat96.out  conflicts_2node.out  copytable.out  ddl_alter_table.out  ddl_disable_ddl.out  ddl_extension.out  ddl_function.out  ddl_grant.out  ddl_namespace.out  ddl_read_only.out  ddl_replication_set.out  ddl_sequence.out  dml_basic.out  dml_delete_pk.out  dml_extended.out  dml_missing_pk.out  dml_sequence.out  dml_toasted.out  guc.out  identifier.out  init.out  init_bdr.out  init_udr.out  part_bdr.out  part_bdr_1.out  part_udr.out  pause.out  pgreplicationslots.out  preseed.out  preseed_check.out  schema  schema.out  schema_desync.out  seq2.out  simple.out  skipchanges.out  skipchanges_1.out  status.out  supervisordb.out  (+4 more)
extsql/: bdr--0.10.0.0--0.10.0.1.sql  bdr--0.10.0.10--0.10.0.11.sql  bdr--0.10.0.11--1.0.0.0.sql  bdr--0.10.0.2--0.10.0.3.sql  bdr--0.10.0.3--0.10.0.4.sql  bdr--0.10.0.4--0.10.0.5.sql  bdr--0.10.0.5--0.10.0.6.sql  bdr--0.10.0.6--0.10.0.7.sql  bdr--0.10.0.7--0.10.0.8.sql  bdr--0.10.0.8--0.10.0.9.sql  bdr--0.10.0.9--0.10.0.10.sql  bdr--0.8.0--0.8.0.1.sql  bdr--0.8.0.1--0.8.0.2.sql  bdr--0.8.0.2--0.8.0.3.sql  bdr--0.8.0.5--0.8.0.6.sql  bdr--0.8.0.6--0.8.0.7.sql  bdr--0.8.0.7--0.9.0.0.sql  bdr--0.8.0.sql  bdr--0.9.0.0--0.9.0.1.sql  bdr--0.9.0.0--0.9.1.0.sql  bdr--0.9.0.1--0.9.0.2.sql  bdr--0.9.0.2--0.9.0.3.sql  bdr--0.9.0.3--0.9.0.4.sql  bdr--0.9.0.4--0.10.0.0.sql  bdr--0.9.0.4--0.9.0.5.sql  bdr--0.9.0.5--0.10.0.0.sql  bdr--0.9.0.5--0.9.1.0.sql  bdr--0.9.1.0--0.9.2.0.sql  bdr--0.9.1.0.sql  bdr--0.9.2.0--0.10.0.0.sql  bdr--0.9.2.0--0.9.3.0.sql  bdr--0.9.3.0--0.9.4.0.sql  bdr--0.9.3.0--1.0.0.0.sql  bdr--1.0.0.0--1.0.1.0.sql  bdr--1.0.0.0--1.1.0.0.sql  bdr--1.0.0.0.sql  bdr--1.0.1.0--1.0.2.0.sql  bdr--1.0.2.0--1.0.3.0.sql  bdr--1.0.2.0--1.1.0.0.sql  bdr--1.0.2.0--2.0.0.0.sql  (+3 more)
pg_dump/: .gitignore  Makefile.in  common.c  compat.h  compress_io.c  dumputils.c  dumputils.h  pg_backup_archiver.c  pg_backup_archiver.h  pg_backup_custom.c  pg_backup_db.c  pg_backup_directory.c  pg_backup_null.c  pg_backup_tar.c  pg_dump.c  pg_dump.h  pg_dump_sort.c
pg_dump96/: pg_backup.h  pg_dump.c  pg_dump.c.rej
scripts/: bdr_initial_load  bdr_initial_load.in  bdr_quickstart.sh
sql/: catalog.sql  compat96.sql  conflict_cases.sql  conflicts_2node.sql  copytable.sql  ddl_grant.sql  ddl_mixed.sql  ddl_namespace.sql  ddl_read_only.sql  ddl_replication_set.sql  ddl_view.sql  dml_extended.sql  dml_missing_pk.sql  dml_toasted.sql  guc.sql  identifier.sql  init.sql  init_bdr.sql  init_udr.sql  part_bdr.sql  part_udr.sql  pause.sql  (+17 more)
(+545 files in other folders)
